--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 requests==2.32.3
-beautifulsoup4==4.12.3
-aiohttp==3.10.6
-selenium==4.25.0
-termcolor==2.4.0
-chromedriver-autoinstaller==0.6.4
-pandas==2.2.3
-lxml==5.3.0
-fpdf==1.7.2
+aio.subprocess==0.0.4
+argparse==1.4.0
+asyncio==3.4.3
+asyncio-requests==2.7.3
+aiohttp==3.10.8
+subprocess32==3.5.4 # Python 3.5 ve öncesi için subprocess ile uyumlu hale getirir
